compiler/intrinsics/bigInteger/TestMultiplyToLen.java fails with java.lang.Exception: Failed

XMLWordPrintable

    • 10
    • b36
    • sparc

        ----------System.err:(13/779)----------
        java.lang.Exception: Failed
        at compiler.intrinsics.bigInteger.TestMultiplyToLen.main(TestMultiplyToLen.java:106)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.base/java.lang.reflect.Method.invoke(Method.java:564)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:115)
        at java.base/java.lang.Thread.run(Thread.java:844)

        JavaTest Message: Test threw exception: java.lang.Exception: Failed
        JavaTest Message: shutting down test

              Assignee:
              Patric Hedlin (Inactive)
              Reporter:
              Sangheon Kim (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: