8191232: compiler/intrinsics/bigInteger/TestMultiplyToLen.java fails with java.lang.Exception: Failed

Generating the wrong insn for pointer comparison in intrinsic (on SPARC).

Reviewed-by: neliasso, kvn